fix spacinggngngngnngnngng nigaGNAIGNAIGNAIGN

--- a/styles.css
+++ b/styles.css
@@ -97,15 +97,12 @@ html, body {
     align-items: center;
     justify-content: center;
 
-    height: 130px;
-    width: 130px;
+    height: 128px;
+    width: 128px;
 
-    margin-left: 50px;
-    margin-right: 50px;
-}
-.mpcc {
-    height: 128px; /* alebo koľko chceš, napr. polka boxu */
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+
+    margin-left: 100px;
+    margin-right: 100px;
 }
